# memcalc

./: Makefile.am  README-JP  README.md  configure.ac  func_putpixel.c  func_putpixel.h  jmptbl.c  jmptbl.h  m  mem.c  mem.h  memcalc.l  memcalc.y  test  test1  test2  test3  test4  test5  test6  test_begin  test_fact  test_goto
sample/: hello.mc  test.mc  test1.mc  test2.mc  test3  test3.mc  test4  test4.mc  test5  test5.mc  test6.mc  test_array  test_array.mc  test_begin  test_begin.mc  test_exp_if.mc  test_fact.mc  test_fact2  test_fact2.mc  test_gosub.mc  test_goto.mc  test_if  test_if.mc  test_if2  test_if3  test_if4  test_if4.mc  test_lambda.mc  test_lambda2.mc  test_mid.mc  test_pix  test_pix.mc  test_var.mc  test_var2  test_var3.mc
sample/bl_func/: test000a.mc  test001a.mc  test002a.mc  test003a.mc  test004a.mc  test008a.mc
src/: Makefile.am  array.c  array.h  calcnode.c  calcnode.h  calcnode_bl_function.c  calcnode_bl_function.h  calcnode_comparison.c  calcnode_comparison.h  calcnode_declarator.c  calcnode_declarator.h  calcnode_expression.c  calcnode_expression.h  calcnode_function.c  calcnode_function.h  calcnode_lambda.c  calcnode_lambda.h  calcnode_operation.c  calcnode_operation.h  calcnode_read_variable.c  calcnode_read_variable.h  calcnode_selection.c  calcnode_selection.h  complex.c  complex.h  func_putpixel.c  func_putpixel.h  jmptbl.c  jmptbl.h  main.c  make_token_to_str.flex.l  mem.c  mem.h  memcalc.bison.y  memcalc.flex.l  mes.c  mes.h  next_memcalc.bison.y  next_memcalc.flex.l  node.c  (+14 more)
src/test/: Makefile.am  test_calcnode.c  test_calcnode_bl_function.c  test_calcnode_comparison.c  test_calcnode_expression.c  test_calcnode_function.c  test_mem.c  test_node2.c  test_node3.c  test_que.c  test_stack.c
