bin_PROGRAMS = test_array test_mem test_node test_que test_stack

test_array_SOURCES = test_array.c ../array.c ../array.h

test_mem_SOURCES = test_mem.c ../mem.c ../mem.h ../stack.c ../stack.h	\
                   ../complex.c ../complex.h ../array.c ../array.h

test_node_SOURCES = test_node.c ../node.c ../node.h ../array.c ../array.h

test_que_SOURCES = test_que.c ../que.c ../que.h ../array.c ../array.h

test_stack_SOURCES = test_stack.c ../stack.c ../stack.h ../array.c ../array.h

CFLAGS = -g -DDEBUG
LIBS = -lm
